# killparent

./: .gitignore  README.md  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  killparent.c
